Fix: Schedule 생성 버그 수정